<?xml version="1.0"?>
<package format="2">
    <name>hi_decklink_ros</name>
    <version>1.0.0</version>
    <description>A wrapper around the DeckLink SDK</description>

    <maintainer email="forte@is.mpg.de">Maria-Paola Forte</maintainer>
    <license>MIT</license>
    
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>camera_info_manager</build_depend>
    <build_depend>cv_bridge</build_depend>

    <depend>sensor_msgs</depend>
</package>
