
<!-- Describes the package to the RPS build system-->

<!--Descries xml header and uses catkin format 2-->
<?xml version="1.0"?>
<package format="2">
    <!-- package name - should match CMakeLists.txt-->
    <name>hi_decklink_ros</name>
    <!-- Your Version of the project and description-->
    <version>1.0.0</version>
    <description>A wrapper around the DeckLink SDK</description>

    <maintainer email="forte@is.mpg.de">Maria-Paola Forte</maintainer>
    <license>MIT</license>

    
    <!--All dependencies-->
    <!--Uses catkin as build tool -->
    <buildtool_depend>catkin</buildtool_depend>
    <!--packages needed at build time-->
    <build_depend>roscpp</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>camera_info_manager</build_depend>
    <build_depend>cv_bridge</build_depend>
    <!--build and run-time necessary -->
    <depend>sensor_msgs</depend>
</package>

