<?xml version="1.0"?>
<!-- Describes the package to the RPS build system-->
<!--Descries xml header and uses catkin format 2-->
<!-- package format is-->
<package format="3">
    <name>hi_decklink_ros2</name>
    <version>2.0.0</version>
    <description>A ROS2 wrapper around the DeckLink SDK</description>
    <maintainer email="Maximilian.Henkel@protonmail.com"> Maximilian Henkel</maintainer>
    <license>MIT</license>

    <!--All dependencies-->
    <buildtool_depend>ament_cmake_ros</buildtool_depend>
    <!--packages needed at build time-->
    <build_depend>rclcpp</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>camera_info_manager</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>std_srvs</build_depend>
    <!--build and run-time necessary -->
    <depend>sensor_msgs</depend>
    <export>
         <build_type>ament_cmake</build_type>
    </export>
</package>

